--- a/Webshop/src/app/login/login.html
+++ b/Webshop/src/app/login/login.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<div class="login-wrapper">
+  <div class="card">
+    <h2>Bejelentkezés</h2>
+
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+
+      <label>Email</label>
+      <input type="email" formControlName="email" placeholder="Email címed">
+      <div class="error" *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched">
+        Érvénytelen email formátum
+      </div>
+
+      <label>Jelszó</label>
+      <input type="password" formControlName="password" placeholder="Jelszó">
+      <div class="error" *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched">
+        Minimum 6 karakter
+      </div>
+
+      <button type="submit" [disabled]="loginForm.invalid">Belépés</button>
+
+    </form>
+  </div>
+</div>
