--- a/Webshop/src/app/login/login.html
+++ b/Webshop/src/app/login/login.html
@@ -16,12 +16,12 @@
         Minimum 8 karakter
       </div>
 
-      <button type="submit">Belépés</button>
+      <p class="switch-text">
+      <a routerLink="/register" class="switch-link">Nincsen fiókja? Regisztráljon</a>
+      <a routerLink="#">Elfelejtette a jelszavát?</a>
+    </p>>
 
-      <div class="links-row">
-        <a href="#">Nincsen fiókja? Regisztráljon</a>
-        <a href="#">Elfelejtette a jelszavát?</a>
-      </div>
+      <button type="submit">Belépés</button>
 
     </form>
   </div>
