--- a/Webshop/src/app/registration/registration.html
+++ b/Webshop/src/app/registration/registration.html
@@ -1,1 +1,40 @@
-<p>registration works!</p>
+<div class="login-wrapper">
+  <div class="card">
+
+    <h2>Regisztráció</h2>
+
+    <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+      <label>Teljes név:</label>
+      <input type="text" formControlName="fullname" placeholder="Add meg a teljes neved">
+      <div class="error" *ngIf="registrationForm.get('fullname')?.touched && registrationForm.get('fullname')?.invalid">
+        Minimum 3 karakter
+      </div>
+
+      <label>E-mail:</label>
+      <input type="email" formControlName="email" placeholder="E-mail címed">
+      <div class="error" *ngIf="registrationForm.get('email')?.touched && registrationForm.get('email')?.invalid">
+        Érvénytelen email formátum
+      </div>
+
+      <label>Jelszó:</label>
+      <input type="password" formControlName="password" placeholder="jelszó">
+      <div class="error" *ngIf="registrationForm.get('password')?.touched && registrationForm.get('password')?.invalid">
+        Minimum 8 karakter
+      </div>
+
+      <label>Jelszó megerősítése:</label>
+      <input type="password" formControlName="confirmPassword" placeholder="Írja be mégegyszer a jelszót">
+      <div class="error"
+        *ngIf="registrationForm.get('confirmPassword')?.touched && registrationForm.get('confirmPassword')?.invalid">
+        A két jelszó nem egyezik
+      </div>
+
+      <p class="switch-text">
+        Már van fiókod?
+        <a routerLink="/login" class="switch-link">Jelentkezzen be</a>
+      </p>
+
+      <button type="submit">Regisztráció</button>
+    </form>
+  </div>
+</div>
