add home-page and navbar

--- a/Webshop/src/app/home-page/home-page.html
+++ b/Webshop/src/app/home-page/home-page.html
@@ -1,1 +1,32 @@
-<p>home-page works!</p>
+<div class="page">
+    <app-nav-bar/>
+    
+    <section class="filter">
+        <div class="field">Márka</div>
+        <div class="field">Modell</div>
+        <div class="field-small">-tól</div>
+        <div class="field-small">-ig</div>
+        <div class="field-small">-tól</div>
+        <div class="field-small">-ig</div>
+
+        <button class="search-btn">Keresés</button>
+    </section>
+
+    <section class="produt">
+        <img src="" />
+      <div class="info">
+        <strong>6 sebességes váltógomb</strong>
+        <p>2018-as Kia Ceed és újabb modellekhez</p>
+        <span>Ár: 13 570 Ft</span>
+      </div>
+      <button class="cart-btn">Kosárba</button>
+
+      <img src="" />
+      <div class="info">
+        <strong>6 sebességes váltógomb</strong>
+        <p>2018-as Kia Ceed és újabb modellekhez</p>
+        <span>Ár: 13 570 Ft</span>
+      </div>
+      <button class="cart-btn">Kosárba</button>
+    </section>
+</div>
