--- a/Webshop/src/app/nav-bar/nav-bar.html
+++ b/Webshop/src/app/nav-bar/nav-bar.html
@@ -1,1 +1,10 @@
-<p>nav-bar works!</p>
+<header class="navbar">
+    <div class="left">
+        <div class="avatar"></div>
+    </div>
+
+    <div class="right">
+        <div class="btn orange">Kosár</div>
+        <div class="btn orange">Bejelentkezés</div>
+    </div>
+</header>
