--- a/Webshop/src/app/home-page/home-page.html
+++ b/Webshop/src/app/home-page/home-page.html
@@ -16,16 +16,16 @@
     <div>
       <label>Évjárat</label>
       <div class="range">
-        <input placeholder="-tól">
-        <input placeholder="-ig">
+        <select placeholder="-tól"></select>
+        <select placeholder="-ig"></select>
       </div>
     </div>
 
     <div>
       <label>Vételár</label>
       <div class="range">
-        <input placeholder="-tól">
-        <input placeholder="-ig">
+        <input placeholder="-tól                           Ft">
+        <input placeholder="-ig                            Ft">
       </div>
     </div>
 
