--- a/Webshop/src/app/nav-bar/nav-bar.html
+++ b/Webshop/src/app/nav-bar/nav-bar.html
@@ -1,10 +1,10 @@
 <header class="navbar">
     <div class="left">
-        <div class="avatar"></div>
+        <button class="avatar"></button>
     </div>
 
     <div class="right">
         <div class="btn orange">Kosár</div>
-        <div class="btn orange">Bejelentkezés</div>
+        <div class="btn orange" routerLink="/login">Bejelentkezés</div>
     </div>
 </header>
