--- a/Webshop/src/app/home-page/home-page.html
+++ b/Webshop/src/app/home-page/home-page.html
@@ -4,21 +4,13 @@
 
   <div class="filters">
     <div>
-      <label>Márka</label>
+      <label>Kategória</label>
       <select></select>
     </div>
 
     <div>
       <label>Modell</label>
       <select></select>
-    </div>
-
-    <div>
-      <label>Évjárat</label>
-      <div class="range">
-        <select placeholder="-tól"></select>
-        <select placeholder="-ig"></select>
-      </div>
     </div>
 
     <div>
