--- a/Webshop/src/app/home-page/home-page.css
+++ b/Webshop/src/app/home-page/home-page.css
@@ -6,7 +6,8 @@
 
 .filters {
   background: #edf2f7;
-  margin-top: 20px;
+  margin: 20px auto;
+  max-width: 900px;
   padding: 20px;
   border-radius: 10px;
 
@@ -39,6 +40,7 @@
 
 .search {
   height: 36px;
+  width: 100px;
 }
 
 h3 {
