complete search-result

--- a/Webshop/src/app/home-page/home-page.html
+++ b/Webshop/src/app/home-page/home-page.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <button class="btn orange search">Keresés</button>
+    <button class="btn orange search" (click)="onSearch()">Keresés</button>
   </div>
 
   <h3>Kiemelt hirdetések:</h3>
