--- a/Webshop/src/app/search-result/search-result.html
+++ b/Webshop/src/app/search-result/search-result.html
@@ -1,1 +1,13 @@
-<p>search-result works!</p>
+<div class="result-wrapper">
+    <h2>Keresési találatok</h2>
+
+    <div *ngIf="result.length ===0" class="no-result">
+        Nincs keresési találat
+    </div>
+
+    <div class="result-card" class=" let item of result">
+        <div>
+            
+        </div>
+    </div>
+</div>
