add navbar to search-result

--- a/Webshop/src/app/search-result/search-result.html
+++ b/Webshop/src/app/search-result/search-result.html
@@ -1,4 +1,7 @@
 <div class="result-wrapper">
+
+    <app-nav-bar/>
+
     <h2>Keresési találatok</h2>
 
     <div *ngIf="result.length ===0" class="no-result">
