--- a/Webshop/src/app/home-page/home-page.html
+++ b/Webshop/src/app/home-page/home-page.html
@@ -33,7 +33,8 @@
       <p>2018-as Kia Ceed és újabb modellekhez</p>
       <p>Ár: 13 570 Ft</p>
     </div>
-    <button class="btn orange">Kosárba</button>
+    <button class="btn orange" (click)="addToCart()">Kosárba</button>
+    <a routerLink="/cart">Kosár</a>
   </div>
 
   <div class="product">
@@ -43,7 +44,8 @@
       <p>Bármelyik autóhoz, amelyben kagylóülések vannak</p>
       <p>Ár: 33 920 Ft</p>
     </div>
-    <button class="btn orange">Kosárba</button>
+    <button class="btn orange" (click)="addToCart()">Kosárba</button>
+    <a routerLink="/cart">Kosár</a>
   </div>
 
 </div>
